# Atmos

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: data_quality_daily.py  ingest_aqi_hourly.py  ingest_fires_6hourly.py  ingest_weather_hourly.py
airflow/dags/utils/: alerting.py  db.py
docs/: architecture.md  runbook.md  schema.md
notebooks/: 01_eda.ipynb
scripts/: bootstrap_stations.py  check_data_quality.py  run_backfill.py
sql/: 01_extensions.sql  02_schemas.sql  03_tables.sql  04_hypertables.sql  05_indexes.sql  06_continuous_aggregates.sql
src/airqualitycast/: __init__.py  config.py
src/airqualitycast/backfill/: historical_loader.py
src/airqualitycast/db/: __init__.py  connection.py  queries.py  upsert.py
src/airqualitycast/ingestion/: __init__.py  aqicn_client.py  firms_client.py  models.py  openaq_client.py  openmeteo_client.py
src/airqualitycast/processing/: __init__.py  bronze_to_silver.py  validators.py
src/airqualitycast/quality/: __init__.py  checks.py  reporter.py
tests/: conftest.py
tests/fixtures/: aqicn_response.json  firms_response.csv  openmeteo_response.json
tests/integration/: test_db_upserts.py  test_end_to_end_dag.py
tests/unit/: test_aqicn_client.py  test_bronze_to_silver.py  test_firms_client.py  test_openmeteo_client.py  test_quality_checks.py
